# Private-Audio-Transcriber-MLX

./: README.md
Private-Audio-Transcriber-v1.0/: app.py  pyproject.toml  start-mac-app.command
Private-Audio-Transcriber-v2.0/: app.py  pyproject.toml  start-mac-app.command  supported-languages-aya.json
