[project]
name = "Private-Audio-Transcriber"
version = "1.0"
description = "An offline transcription and dictation tool for Mac."
readme = "README.md"
license = "Apache-2.0"
requires-python = "==3.12.*"
dependencies = [
    "huggingface-hub==1.4.1",
    "mlx-lm==0.30.6",
    "flask==3.1.2",
    "mlx-whisper==0.4.3",
]

